@@ -39,6 +39,7 @@ Template for new versions:
 - `gui/launcher`: fix history scanning (Up/Down arrow keys) being slow to respond when in minimal mode
 - `control-panel`: fix filtering not filtering when running the ``list`` command
 - `gui/notify`: don't zoom to forbidden depots for merchants ready to trade notification
+- `catsplosion`: only cause pregnancies in adults
 
 ## Misc Improvements
 - `gui/launcher`: add interface for browsing and filtering commands by tags
